fix spacing at some places

--- a/css/style.css
+++ b/css/style.css
@@ -258,8 +258,13 @@ button:hover {
     text-align: center;
 }
 
+.main__lower section {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
 .main__lower section p {
-    margin-top: 50px;
+    margin-top: 25px;
     width: 442px;
     line-height: 20px;
 }
@@ -316,6 +321,7 @@ button:hover {
 
 .main__card p {
     color: #00000066;
+    margin: 0 20px;
     line-height: 18px;
 }
 
@@ -331,7 +337,7 @@ button:hover {
     flex-direction: column;
     grid-column: auto / span 2;
     grid-row: auto / span 5;
-    padding: 40px;
+    padding: 35px;
 }
 
 .box__number {
